[package]
name = "zentripetal"
version = "0.1.0"
edition = "2021"
authors = ["Mo Mobarak <mo@zentripetal.com>"]
description = "Root crate for the Zentripetal ecosystem"
license = "MIT"
repository = "https://github.com/zentripetal/zentripetal"
homepage = "https://zentripental.com"
readme = "README.md"
